# Exerice

./: CMakeLists.txt  main.c  readme.md
inc/: EXE_bit.h  EXE_fibonacci.h  EXE_file.h  EXE_fish.h  EXE_letcode.h  EXE_macro.h  EXE_pointer.h  EXE_practice.h  EXE_search.h  EXE_sort.h  EXE_studentLink.h  EXE_util.h
notes/: 08-05.md  08-06.md
src/: EXE_bit.c  EXE_fibonacci.c  EXE_file.c  EXE_fish.c  EXE_letcode.c  EXE_macro.c  EXE_pointer.c  EXE_practice.c  EXE_search.c  EXE_sort.c  EXE_studentLink.c  EXE_util.c
